--- a/Mpp_Project/AndroidManifest.xml
+++ b/Mpp_Project/AndroidManifest.xml
@@ -5,16 +5,22 @@
 	android:versionName="1.0" >
 
 	<uses-sdk
-		android:minSdkVersion="11"
+		android:minSdkVersion="14"
 		android:targetSdkVersion="20" />
+
+	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name"
 		android:theme="@style/Theme.Colloc" >
+		<meta-data
+			android:name="com.facebook.sdk.ApplicationId"
+			android:value="@string/app_id" />
+
 		<activity
-			android:name=".activity.MainActivity"
+			android:name="dk.aau.mpp_project.activity.MainActivity"
 			android:label="@string/app_name" >
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
