A few more modification to get started with FB

--- a/Mpp_Project/AndroidManifest.xml
+++ b/Mpp_Project/AndroidManifest.xml
@@ -18,6 +18,8 @@
 		<meta-data
 			android:name="com.facebook.sdk.ApplicationId"
 			android:value="@string/app_id" />
+		
+		<activity android:name="k.aau.mpp_project.activity.LoginActivity"/>
 
 		<activity
 			android:name="dk.aau.mpp_project.activity.MainActivity"
