--- a/Mpp_Project/.project
+++ b/Mpp_Project/.project
@@ -3,6 +3,8 @@
 	<name>Mpp_Project</name>
 	<comment></comment>
 	<projects>
+		<project>android-support-v7-appcompat</project>
+		<project>FacebookSDK</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
