--- a/Mpp_Project/AndroidManifest.xml
+++ b/Mpp_Project/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <uses-permission android:name="dk.aau.mpp_project.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".application.MyApplication"
+        android:name="dk.aau.mpp_project.application.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -36,7 +36,7 @@
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name" />
         <activity
-            android:name=".activity.LogInActivity"
+            android:name="dk.aau.mpp_project.activity.LogInActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,7 +45,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name="dk.aau.mpp_project.activity.MainActivity"
             android:label="@string/app_name" >
         </activity>
 
@@ -71,6 +71,10 @@
         <activity
             android:name="dk.aau.mpp_project.activity.FlatActivity"
             android:label="@string/title_activity_flat" >
+        </activity>
+        <activity
+            android:name="dk.aau.mpp_project.NewFlatActivity"
+            android:label="@string/title_activity_new_flat" >
         </activity>
     </application>
 
