--- a/Mpp_Project/AndroidManifest.xml
+++ b/Mpp_Project/AndroidManifest.xml
@@ -73,7 +73,7 @@
             android:label="@string/title_activity_flat" >
         </activity>
         <activity
-            android:name="dk.aau.mpp_project.NewFlatActivity"
+            android:name="dk.aau.mpp_project.activity.NewFlatActivity"
             android:label="@string/title_activity_new_flat" >
         </activity>
     </application>
