--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Mpp_Project/proguard-project.txt
 Mpp_Project/libs/android-support-v4.jar
 
 Mpp_Project/libs/android-support-v4.jar
+
+Mpp_Project/libs/android-support-v4.jar
