--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Mpp_Project/libs/android-support-v4.jar
 Mpp_Project/libs/android-support-v4.jar
 
 Mpp_Project/libs/android-support-v4.jar
+
+Mpp_Project/src/dk/aau/mpp_project/activity/LogInActivity.java
