ignore this f**** file!

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Mpp_Project/libs/android-support-v4.jar
 Mpp_Project/src/dk/aau/mpp_project/activity/LogInActivity.java
 
 Mpp_Project/src/dk/aau/mpp_project/activity/LogInActivity.java
+
+Mpp_Project/src/dk/aau/mpp_project/activity/LogInActivity.java
