--- a/Mpp_Project/AndroidManifest.xml
+++ b/Mpp_Project/AndroidManifest.xml
@@ -47,14 +47,15 @@
 		</activity>
 		<activity
 			android:name="dk.aau.mpp_project.activity.MainActivity"
-			android:label="@string/app_name" >
+			android:label="@string/app_name"
+			android:screenOrientation="portrait" >
 		</activity>
-		
+
 		<receiver
 			android:name="dk.aau.mpp_project.receiver.NotificationReceiver"
 			android:exported="false" >
 			<intent-filter>
-				<action android:name="dk.aau.mpp_project.action.push" />
+				<action android:name="colloc.action.push" />
 			</intent-filter>
 		</receiver>
 
@@ -79,11 +80,13 @@
 
 		<activity
 			android:name="dk.aau.mpp_project.activity.FlatActivity"
-			android:label="@string/title_activity_flat" >
+			android:label="@string/title_activity_flat"
+			android:screenOrientation="portrait" >
 		</activity>
 		<activity
 			android:name="dk.aau.mpp_project.activity.NewFlatActivity"
-			android:label="@string/title_activity_new_flat" >
+			android:label="@string/title_activity_new_flat"
+			android:screenOrientation="portrait" >
 		</activity>
 	</application>
 
