--- a/Mpp_Project/AndroidManifest.xml
+++ b/Mpp_Project/AndroidManifest.xml
@@ -93,6 +93,11 @@
             android:label="@string/title_activity_change_details"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="dk.aau.mpp_project.activity.FlatLoginActivity"
+            android:label="@string/title_activity_flat_login"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
